unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/bt_stripe__Balance_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Balance_Due_Amount__c</fullName>
    <description>The balance due, calculated as the total less the balance paid and amount written off.</description>
    <inlineHelpText>The balance due, calculated as the total less the balance paid.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>