unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Attendee for this this Line Item ticket or paid session.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>