unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Attendee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Full_Name__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;&amp; conference360__Attendee__r.Id , conference360__Attendee__r.conference360__Attendee_Full_Name__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Full Name</label>
    <type>Text</type>
</CustomField>