unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Set to the Event this purchase is related to.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>