unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Event_Item__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Item</label>
    <referenceTo>conference360__Event_Item__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>