unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Event_Item_Session__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Item_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The session ticket associated with line item.</inlineHelpText>
    <label>Event Item Session</label>
    <referenceTo>conference360__Event_Item_Session__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>