unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Event_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Item_Type__c</fullName>
    <formula>TEXT(conference360__Event_Item__r.conference360__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Item Type</label>
    <type>Text</type>
</CustomField>