unpackaged/main/default/objects/bt_stripe__Line_Item__c/fields/conference360__Event_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Line_Items__c</fullName>
    <formula>conference360__Event__c = LEFT($Setup.conference360__Blackthorn_Events_Settings_Protected__c.conference360__Event_Record_Id__c, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Line Items</label>
    <type>Checkbox</type>
</CustomField>