unpackaged/main/default/objects/bt_stripe__Line_Item__c/listViews/conference360__Event_Donations.listView-meta.xml
<ListView>
    <fullName>conference360__Event_Donations</fullName>
    <columns>NAME</columns>
    <columns>conference360__Attendee__c</columns>
    <columns>conference360__Attendee_Full_Name__c</columns>
    <columns>conference360__Event__c</columns>
    <columns>bt_stripe__Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>conference360__Event_Line_Items__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>conference360__Event_Item_Type__c</field>
        <operation>equals</operation>
        <value>Donation</value>
    </filters>
    <label>Event Donations</label>
</ListView>